; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_ib_ring.c_rds_ib_ring_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_ib_ring.c_rds_ib_ring_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_ib_work_ring = type { i32, i32, i32 }

@rds_ib_ring_empty_wait = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rds_ib_ring_free(%struct.rds_ib_work_ring* %0, i32 %1) #0 {
  %3 = alloca %struct.rds_ib_work_ring*, align 8
  %4 = alloca i32, align 4
  store %struct.rds_ib_work_ring* %0, %struct.rds_ib_work_ring** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.rds_ib_work_ring*, %struct.rds_ib_work_ring** %3, align 8
  %6 = getelementptr inbounds %struct.rds_ib_work_ring, %struct.rds_ib_work_ring* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = add nsw i32 %7, %8
  %10 = load %struct.rds_ib_work_ring*, %struct.rds_ib_work_ring** %3, align 8
  %11 = getelementptr inbounds %struct.rds_ib_work_ring, %struct.rds_ib_work_ring* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = srem i32 %9, %12
  %14 = load %struct.rds_ib_work_ring*, %struct.rds_ib_work_ring** %3, align 8
  %15 = getelementptr inbounds %struct.rds_ib_work_ring, %struct.rds_ib_work_ring* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.rds_ib_work_ring*, %struct.rds_ib_work_ring** %3, align 8
  %18 = getelementptr inbounds %struct.rds_ib_work_ring, %struct.rds_ib_work_ring* %17, i32 0, i32 2
  %19 = call i32 @atomic_add(i32 %16, i32* %18)
  %20 = load %struct.rds_ib_work_ring*, %struct.rds_ib_work_ring** %3, align 8
  %21 = call i64 @__rds_ib_ring_empty(%struct.rds_ib_work_ring* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %2
  %24 = call i64 @waitqueue_active(i32* @rds_ib_ring_empty_wait)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %23
  %27 = call i32 @wake_up(i32* @rds_ib_ring_empty_wait)
  br label %28

28:                                               ; preds = %26, %23, %2
  ret void
}

declare dso_local i32 @atomic_add(i32, i32*) #1

declare dso_local i64 @__rds_ib_ring_empty(%struct.rds_ib_work_ring*) #1

declare dso_local i64 @waitqueue_active(i32*) #1

declare dso_local i32 @wake_up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
